Feat: 1. Moved index inside the public folder

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Financial Tracker</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 </head>
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="#">HISTORY</a></li>
-                <li><a href="public/budget.html">BUDGET TRACKER</a></li>
+                <li><a href="./budget.html">BUDGET TRACKER</a></li>
                 <li><a href="#">SALES TRACKER</a></li>
             </ul>
             <!-- Special Reminder Box -->
@@ -58,10 +58,10 @@
         <p>&copy; 2024 Financial Tracker</p>
     </footer>
 
-    <script src="./charts/saleChart.js"></script>
-    <script src="./charts/budgetChart.js"></script>
-    <script src="./charts/monthlyChart.js"></script>
-    <script src="./js/reminder.js"></script>
-    <script src="./js/header.js"></script>
+    <script src="../charts/saleChart.js"></script>
+    <script src="../charts/budgetChart.js"></script>
+    <script src="../charts/monthlyChart.js"></script>
+    <script src="../js/reminder.js"></script>
+    <script src="../js/header.js"></script>
 </body>
 </html>
