--- a/budget.html
+++ b/budget.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/budget.css">
+    <link rel="stylesheet" href="./css/budget.css">
     <link rel="icon" href="../images/icon.jpg" type="image/jpeg">
     <title>BUDGET BREAKDOWN</title>
 </head>
@@ -130,6 +130,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/budget.js"></script>
+    <script src="./js/budget.js"></script>
 </body>
 </html>
