Feat: 1. Added menu in the budget tab

--- a/budget.html
+++ b/budget.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/budget.css">
+    <link rel="stylesheet" href="./css/menu.css">
     <link rel="icon" href="../images/icon.jpg" type="image/jpeg">
     <title>BUDGET BREAKDOWN</title>
 </head>
 <body>
+    <!-- Hamburger Menu Icon -->
+    <div class="hamburger" id="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <!-- Side Menu -->
+    <div class="menu" id="menu">
+        <a href="index.html">Home</a>
+        <a href="history.html">History</a>
+        <a href="sales-tracker.html">Sales Tracker</a>
+    </div>
+
     <div class="container mt-5">
         <h1 class="mb-4 contentTitle">MONTHLY BUDGET BREAKDOWN</h1>
 
@@ -131,5 +146,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/budget.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
