--- a/budget.html
+++ b/budget.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/budget.css">
     <link rel="stylesheet" href="./css/menu.css">
-    <link rel="icon" href="../images/icon.jpg" type="image/jpeg">
+    <link rel="icon" href="./images/icon.jpg" type="image/jpeg">
     <title>BUDGET BREAKDOWN</title>
 </head>
 <body>
@@ -20,8 +20,8 @@
     <!-- Side Menu -->
     <div class="menu" id="menu">
         <a href="index.html">Home</a>
-        <a href="history.html">History</a>
-        <a href="sales-tracker.html">Sales Tracker</a>
+        <a href="#">History</a>
+        <a href="sales.html">Sales Tracker</a>
     </div>
 
     <div class="container mt-5">
