--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#">HISTORY</a></li>
                 <li><a href="budget.html">BUDGET TRACKER</a></li>
-                <li><a href="#">SALES TRACKER</a></li>
+                <li><a href="sales.html">SALES TRACKER</a></li>
             </ul>
             <!-- Special Reminder Box -->
             <div class="reminder-box">
